# scout

./: .gitignore  LICENSE  Makefile  README.md  app.py  config.toml  pyproject.toml  ranking.py  repo.py  settings.py
.github/workflows/: ci.yml
scripts/: build_gazetteer.py
sql/migrations/: 000_init.sql  001_pois.sql  002_admin.sql  003_views.sql
